examples/kube/kube-template.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: nsi-snmpmon
  name: nsi-snmpmon
  namespace: opennsa
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: nsi-snmpmon
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        k8s-app: nsi-snmpmon
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - k8s-igrok-01.calit2.optiputer.net
                - k8s-igrok-02.calit2.optiputer.net
                - k8s-igrok-03.calit2.optiputer.net
                - k8s-igrok-04.calit2.optiputer.net
                - k8s-igrok-05.calit2.optiputer.net
                - k8s-igrok-06.calit2.optiputer.net
      containers:
      - image: sdnsense/nsi-snmpmon:latest
        imagePullPolicy: Always
        name: nsi-snmpmon
        ports:
          - containerPort: 8443
            protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: "1"
            memory: 1Gi
        volumeMounts:
        - mountPath: /etc/snmp-mon.yaml
          name: snmpmon-prpdev
          subPath: snmp-mon.yaml
        - mountPath: /etc/httpd/certs/cert.pem
          name: cert-nsi-snmpmon-prpdev
          readOnly: true
          subPath: cert.pem
        - mountPath: /etc/httpd/certs/privkey.pem
          name: cert-nsi-snmpmon-prpdev
          readOnly: true
          subPath: privkey.pem
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      volumes:
      - name: snmpmon-prpdev
        configMap:
          name: snmpmon-prpdev
          defaultMode: 420
          items:
          - key: snmp-mon.yaml
            path: snmp-mon.yaml
      - name: cert-nsi-snmpmon-prpdev
        secret:
          defaultMode: 420
          items:
          - key: tls.crt
            path: cert.pem
          - key: tls.key
            path: privkey.pem
          secretName: cert-nsi-snmpmon-prpdev
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  namespace: opennsa
  labels:
    k8s-app: nsi-snmpmon
  name: nsi-snmpmon
spec:
  ports:
  - port: 8443
    protocol: TCP
    targetPort: 8443
    name: https
  selector:
    k8s-app: nsi-snmpmon
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: opennsa
  annotations:
    kubernetes.io/ingress.class: haproxy
    haproxy-ingress.github.io/ssl-passthrough: "true"
  name: nsi-snmpmon
spec:
  rules:
  - host: nsi-snmpmon-prpdev.nrp-nautilus.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nsi-snmpmon
            port:
              number: 8443
  tls:
  - hosts:
    - nsi-snmpmon-prpdev.nrp-nautilus.io
    secretName: cert-nsi-snmpmon-prpdev
